Fix filtering on teams tab

--- a/views/index.njk
+++ b/views/index.njk
@@ -2,6 +2,5 @@
 {% set active = "home" %}
 
 {% block content %}
-  <h2 class="title">Welcome!</h2>
-  <p>This is the home page.</p>
+  <h2 class="title">Welcome to the Service Dashboard</h2>
 {% endblock %}
