--- a/views/partials/tabs.njk
+++ b/views/partials/tabs.njk
@@ -3,11 +3,11 @@
     <li class="{{ 'is-active' if active == 'home' }}">
       <a href="{{basePath}}">Home</a>
     </li>
-    <li class="{{ 'is-active' if active == 'overview' }}">
-      <a href="{{basePath}}/overview">Overview</a>
-    </li>
     <li class="{{ 'is-active' if active == 'teams' }}">
       <a href="{{basePath}}/teams">Teams</a>
+    </li>
+    <li class="{{ 'is-active' if active == 'details' }}">
+      <a href="{{basePath}}/details">Details</a>
     </li>
     <li class="{{ 'is-active' if active == 'runtimes' }}">
       <a href="{{basePath}}/runtimes">Runtimes</a>
