--- a/views/partials/tabs.njk
+++ b/views/partials/tabs.njk
@@ -7,7 +7,7 @@
       <a href="{{basePath}}/teams">Teams</a>
     </li>
     <li class="{{ 'is-active' if active == 'details' }}">
-      <a href="{{basePath}}/details">Details</a>
+      <a href="{{basePath}}/details">All Services</a>
     </li>
     <li class="{{ 'is-active' if active == 'runtimes' }}">
       <a href="{{basePath}}/runtimes">Runtimes</a>
