--- a/views/runtimes.njk
+++ b/views/runtimes.njk
@@ -4,8 +4,8 @@
 {% from "macros.njk" import addDaysAgo %}
 
 {% block content %}
-<div class="tab-container">
-  <table class="table">
+<div class="table-container">
+  <table class="table is-fullwidth">
     <thead>
       <!-- Col Headers -->
       <tr>
@@ -57,7 +57,6 @@
         {% endfor %}
       {% endfor %}
     </tbody>
-    </table>
   </table>
 </div>
 {% endblock %}
