Rename runtime table headers

--- a/views/runtimes.njk
+++ b/views/runtimes.njk
@@ -9,8 +9,8 @@
     <thead>
       <!-- Col Headers -->
       <tr>
-          <th class="row-header-title header-project"         id="col-head-project"         data-type="string">Project</th>
-          <th class="row-header-title header-cycle"           id="col-head-cycle"           data-type="string">Cycle</th>
+          <th class="row-header-title header-project"         id="col-head-project"         data-type="string">Runtime</th>
+          <th class="row-header-title header-cycle"           id="col-head-cycle"           data-type="string">Version</th>
           <th class="row-header-title header-eol"             id="col-head-eol"             data-type="date">EOL</th>
           <th class="row-header-title header-latest"          id="col-head-latest"          data-type="string">Latest</th>
           <th class="row-header-title header-latest-rel-date" id="col-head-latest-rel-date" data-type="date">Latest Release Date</th>
