Add service count to teams

--- a/views/teams.njk
+++ b/views/teams.njk
@@ -93,7 +93,7 @@
 
                 <div class="no-wrap-inline-contents">
                     <input type="checkbox" id="{{ standardId }}" class="level1-checkbox" checked>
-                    <label for="{{ standardId }}" class="label-level1-checkbox">{{ document._id }}</label>
+                    <label for="{{ standardId }}" class="label-level1-checkbox">{{ document._id }} ({{ document.servicesCount }})</label>
                 </div>
                 {% endif %}
             {% endfor %}
