--- a/public/css/common.css
+++ b/public/css/common.css
@@ -7,3 +7,14 @@
   z-index: 2; /* keep above rows */
   box-shadow: 0 2px 2px rgba(0,0,0,0.1);
 }
+
+.has-tooltip::before,
+.has-tooltip::after,
+.has-tooltip-bottom::before,
+.has-tooltip-bottom::after,
+.has-tooltip-right::before,
+.has-tooltip-right::after,
+.has-tooltip-left::before,
+.has-tooltip-left::after {
+  z-index: 9999 !important;
+}
