--- a/views/main.njk
+++ b/views/main.njk
@@ -20,7 +20,7 @@
       </div>
    </header>
 
-   <div class="main-content">
+   <div class="content">
       <div class="tabs is-medium is-boxed">
          <ul>
          {% for tab in tabs %}
