--- a/views/layout.njk
+++ b/views/layout.njk
@@ -15,7 +15,7 @@
   <section class="hero">
     <div class="hero-body">
       <p class="title">Companies House Service Dashboard</p>
-      <p class="subtitle">Last scan: {{ lastScan }}</p>
+      <p class="subtitle">Last scan: {{ lastScan | date("DD MMM YYYY - h:mm:ss A") }}</p>
     </div>
   </section>
 
